--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -439,7 +439,7 @@ p.subtit {position: absolute; top: -38px;}
 #cat117 .desc-good, #cat254 .desc-good, #cat230 .desc-good, #cat293 .desc-good,
 #cat120 .desc-good, #cat191 .desc-good {min-width:40em;}
 */
-#cat70  .desc-good, #cat522 .desc-good, #cat548 .desc-good
+#cat70  .desc-good, #cat522 .desc-good, #cat548 .desc-good, #cat610 .desc-good
 {min-width:42em;}
 #cat175 .desc-good, #cat270 .desc-good,
 #cat247 .desc-good,
