--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -5,6 +5,7 @@ b abbr, b acronym, .dop abbr, .dop acronym, .title abbr, .title acronym {font-st
 abbr:hover, acronym:hover, li span[title]:hover {border-bottom: 1px solid; cursor: help; }
 a:active {outline: none; -moz-outline-style: none;}
 a:focus {outline: none; -moz-outline-style: none;}
+h2.refs {font-size: 150%; color: #ec8911;}
 h5 {font-size: 130%; font-weight: bold; text-align: center; padding: 12px 40px 5px 0; margin: 0;}
 p.spo1 {background-color:#485257;}
 p.spo2 {background-color:#27333A;}
@@ -368,6 +369,8 @@ div.refbanner page {padding-right: 269px; }
 .ref .cblock .txt   {padding: 0 0 1px 8px; font-size: 14px; line-height: 120%;}
 .ref .cblock .txt i {font-size: 14px;}
 .ref .cblock a, .ref .cblock a:hover      {color: #000000;}
+/* Костыли для ссылки на top-level раздел с кривой иконкой */
+body#cat50 h2+table.cblock img {width: 70px; height: 70px;}
 
 #nooferta {text-align: center; font-size: 75%; color: #555; line-height: 100%; padding:4px 23px 1px 23px;}
 
