--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -178,7 +178,7 @@ li.ui-menu-item {background-color: #f0f0e0;}
 .good-txt dl {font-size: 80%; line-height: 95%; max-width: 30em; margin: 2px auto auto -40px; padding-left: 10%;}
 #cat120 .good-txt dl {max-width: 25em;}
 #cat180 .good-txt dl {max-width: 39em;}
-#cat198 .good-txt dl, #cat199 .good-txt dl, #cat431 .good-txt dl {max-width: 35em;}
+#cat198 .good-txt dl, #cat199 .good-txt dl, #cat431 .good-txt dl, #cat578 .good-txt dl {max-width: 35em;}
 #cat216 .good-txt dl {max-width: 39em;}
 /*.good-txt dt {font-style: italic; float: left; clear: right;}*/
 .good-txt dd {white-space: nowrap;}
