The last work day

--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -458,7 +458,7 @@ p.subtit {position: absolute; top: -38px;}
 */
 #cat70  .desc-good, #cat522 .desc-good, #cat548 .desc-good, #cat610 .desc-good
 {min-width:42em;}
-#cat175 .desc-good, #cat270 .desc-good,
+#cat35  .desc-good, #cat175 .desc-good, #cat270 .desc-good,
 #cat247 .desc-good,
 #cat279 .desc-good, #cat335 .desc-good, #cat148 .desc-good,
 #cat416 .desc-good,
