--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -394,12 +394,14 @@ div.refbanner page {padding-right: 269px; }
 .ref .cblock .txt i {font-size: 14px;}
 .ref .cblock a, .ref .cblock a:hover      {color: #000000;}
 /* Костыли для ссылки со страницы без товаров */
-h2.refs {text-align: center; position: relative; left: -100px; font-size: 150%; color: #ec8911;}
+h2.refs {padding: 60px 0 20px; text-align: center; position: relative; left: -100px; font-size: 150%; color: #ec8911;}
 h2+table.cblock {float: none; margin: 10px auto 0px auto; position: relative; left: -100px; }
-/*h2+table.cblock {margin: auto}*/
+#cat46 h2+table.cblock {float: left; left: 0px; }
 /* Костыли для ссылки на top-level раздел с кривой квадратной иконкой */
 .ref .cblock td:nth-child(1) img,
-body#cat50 h2+.cblock td:nth-child(1) img {width: auto; height: 70px;}
+body#cat50  h2+.cblock td:nth-child(1) img,
+body#cat454 h2+.cblock td:nth-child(1) img
+  {width: auto; height: 70px;}
 
 #nooferta {text-align: center; font-size: 75%; color: #555; line-height: 100%; padding:4px 23px 1px 23px;}
 
