--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -37,6 +37,14 @@ div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 
 .top-tab.act .ny2017a4 {padding-left: 39px; text-align: center; font-size: 13px; line-height: 19px; color: #eeeeee;}
 .top-tab.act .ny2017a4 b {color: #ffffff;}
 
+/**** SEO block ****/
+#mt1 {padding: 0 30px 0 14px;}
+#mt1 h1 {padding: 12px 0 0 0; line-height: 100%; font-size: 150%;}
+#mt1 h2 {padding: 0; font-size: 150%; display: inline;}
+#mt1 h3 {padding: 0; font-size: 120%; display: inline;}
+#mt1 p  {padding: 0; }
+#mt1 a {}
+
 /**** Main & patches to DESIGN.CSS ****/
 /* top */
 /* .top-tab>tbody>tr>td>a>img {margin: 0px 0px 5px 23px !important;} */
