--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -60,6 +60,7 @@ div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 
 .address_top .adres a {color: #fff; text-decoration: none; font-size: 18px; line-height: 19px; }
 .address_top .adres a:hover {color: #fff; text-decoration: underline;}
 .address_top .adres.time {font-size: 15px; line-height: 15px; margin: 0px 0 -1px 14px;}
+.address_top .adres.time.to17 {margin: 0 -20px -1px -25px;}
 .address_top .adres.cm   {font-size: 15px; line-height: 14px; margin: 0px 0 -1px 14px; font-weight: bold}
 .top-cert {vertical-align: middle; padding: 0px 6px 0px 24px;}
 p.crumbs {line-height: 125%; padding: 2px 0 6px; margin: 0; }
