--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -18,20 +18,24 @@ p.spo1:hover, p.spo2:hover{background-color:#000;}
 .c {text-align: center;}
 .i {font-style: italic;}
 
-/* tmp
-div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
-.addtop1 {color: #eeeeff; font-size: 20px; margin: 8px 0 0 12px;}
-.ny2017a1 {font-size: 24px; font-weight: bold; color: #00f8ff; line-height: 28px;}
-.ny2017w  {margin: -12px 0 0 15px; line-height: 14px; font-size: 13px; color: #ffffff;}
-*/
+/* regular begin */
 .ny2017a  {padding-left: 42px; text-align: center; font-family: Georgia serif; font-style: italic; white-space: nowrap;}
 .ny2017a a       {text-decoration: none;}
 .ny2017a a:hover {text-decoration: underline; color: #fff;}
 .ny2017a1 {font-size: 24px; font-weight: bold; color: #dddddd; line-height: 28px}
 .ny2018a1 {margin: 0 20px 0 25px; font-size: 48px; font-weight: bold; color: #88bbff; line-height: 28px}
-.ny2017a2 {border: none; margin: 0px 3px 0px 0px;}
 .ny2017a3 {font-size: 30px; font-weight: bold; color: #ffffff; line-height: 20px;}
 .ny2017b  {padding: 0px 0px 6px 42px; text-align: center; font-weight: bold; color: #00f8ff; font-size: 16px; line-height: 7px;}
+/* regular end */
+/* tmp begin
+div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
+.addtop1 {color: #eeeeff; font-size: 20px; margin: 8px 0 0 12px;}
+*/
+.ny2017a1 {font-size: 35px; font-weight: bold; color: #00f8ff; }
+.ny2017a2 {border: none; margin: 0px 2px 0px 0px;}
+.ny2017a2r{border: none; margin: 0px -40px 0px 1px;}
+.ny2017w  {margin: -1px 0 0 55px; line-height: 14px; font-size: 13px; color: #ffffff;}
+/* tmp end */
 
 .top-tab.act .ny2017a  {padding-left: 12px;}
 .top-tab.act .ny2017a1 {font-size: 22px; line-height: 16px; color: #ff5500;}
@@ -56,12 +60,12 @@ div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 
 .phone {width: 240px; height: 43px; margin: -2px 0 0 40px; padding: 6px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
 .phone .phones {color: #fff; font-size: 28px; margin: 0; padding: 0 0px 0 5px;}
 .address_top {width: 100%; white-space: nowrap}
-.address_top .adres {padding: 0; margin: 0; color: #fff;}
+.address_top .adres {padding: 0; margin: 0 0 0 23px; color: #fff;}
 .address_top .adres a {color: #fff; text-decoration: none; font-size: 18px; line-height: 19px; }
 .address_top .adres a:hover {color: #fff; text-decoration: underline;}
 .address_top .adres.time {font-size: 15px; line-height: 15px; margin: 0px 0 -1px 14px;}
 .address_top .adres.time.to17 {margin: 0 -20px -1px -25px;}
-.address_top .adres.cm   {font-size: 15px; line-height: 14px; margin: 0px 0 -1px 14px; font-weight: bold}
+.address_top .adres.cm   {font-size: 15px; line-height: 14px; margin: 0px 0 -1px 80px; font-weight: bold}
 .top-cert {vertical-align: middle; padding: 0px 6px 0px 24px;}
 p.crumbs {line-height: 125%; padding: 2px 0 6px; margin: 0; }
 p.crumbs, p.crumbs a, p.crumbs a:hover {color: #808080; }
