--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -19,13 +19,13 @@ p.spo1:hover, p.spo2:hover{background-color:#000;}
 .i {font-style: italic;}
 
 /* regular begin */
-.ny2017a  {padding-left: 42px; text-align: center; font-family: Georgia serif; font-style: italic; white-space: nowrap;}
+.ny2017a  {padding-left: 10%; text-align: left; font-family: Georgia serif; font-style: italic; white-space: nowrap;}
 .ny2017a a       {text-decoration: none;}
 .ny2017a a:hover {text-decoration: underline; color: #fff;}
 .ny2017a1 {font-size: 24px; font-weight: bold; color: #dddddd; line-height: 28px}
 .ny2018a1 {margin: 0 20px 0 25px; font-size: 48px; font-weight: bold; color: #88bbff; line-height: 28px}
 .ny2017a3 {font-size: 30px; font-weight: bold; color: #ffffff; line-height: 20px;}
-.ny2017b  {padding: 0px 0px 6px 42px; text-align: center; font-weight: bold; color: #00f8ff; font-size: 16px; line-height: 7px;}
+.ny2017b  {padding: 0px 0px 6px 14%; text-align: left; font-weight: bold; color: #00f8ff; font-size: 16px; line-height: 7px;}
 /* regular end */
 /* tmp begin
 div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
@@ -89,6 +89,7 @@ h1 {line-height: 125%;}
 .lmenu li ul li ul li {font-size: 12px; line-height: 13px; color: #ff9900; list-style-type: disc;}
 .lmenu li ul li ul li a, .lmenu li ul li ul li.open span {width: 230px; padding: 3px 1px 4px 0px; background: none;}
 .call {line-height: 200%;}
+.call.bot {line-height: 118%; width: 36%;}
 .tab .rub {font-weight: normal; font-size: larger; line-height: 50%; position: relative; top: 1px;}
 .info-cat {padding: 0px 0 40px 15px;}
 td.white>div.about { padding-left: 12px;}
