--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -421,7 +421,13 @@ div.refbanner page {padding-right: 269px; }
 .ref .cblock a, .ref .cblock a:hover      {color: #000000;}
 /* Костыли для ссылки со страницы без товаров */
 h2.refs {padding: 60px 0 20px; text-align: center; position: relative; left: -100px; font-size: 150%; color: #ec8911;}
+  /* Центрировать ссылку под заголовком */
 h2+table.cblock {float: none; margin: 10px auto 0px auto; position: relative; left: -100px; }
+  /* Отменить Центрирование там, где ссылок несколько */
+#cat64  h2+table.cblock, #cat424 h2+table.cblock, #cat65  h2+table.cblock,
+#cat507 h2+table.cblock, #cat508 h2+table.cblock, #cat513 h2+table.cblock,
+#cat100 h2+table.cblock {float: left; margin-right: 30px; position: static; }
+/* Отменить Центрирование там, где начинается следующая группа ссылок */
 #cat46 h2+table.cblock {float: left; left: 0px; }
 /* Костыли для ссылки на top-level раздел с кривой квадратной иконкой */
 .ref .cblock td:nth-child(1) img,
