--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -286,7 +286,7 @@ margin:0;}
 #specoffers_page .spof :last-child .red {font-size: 150%;}
 
 table.one-good.many.later0001, table.one-good.mono.later0001 td.good-txt,
-table.tab.later0001 tr,                  {background-color: #f6f6f8;}
+table.tab.later0001 tr                  {background-color: #f6f6f8;}
 table.tab.ltd:after, table.one-good.mono.ltd:after, table.tab.ltdi:after,
 table.tab.sale1:after, table.one-good.mono.sale1:after,
 table.tab.callprice:after, table.one-good.mono.callprice:after,
@@ -551,13 +551,13 @@ ul.lmenu > li:nth-child(5) > ul > li:nth-child(2) > a    {font-size: 20px; color
 ul.lmenu > li:nth-child(5) > ul > li:nth-child(1) > span,
 ul.lmenu > li:nth-child(5) > ul > li:nth-child(2) > span {font-size: 20px; font-weight: bold; font-family: Georgia, serif}
 
-#cat46 table.cblock:nth-child(13) {margin-bottom: 38px;}
-#cat46 table.cblock:nth-child(14) {clear: both;}
-#cat46 table.cblock:nth-child(14):before {content: "Свёрла по металлу";
+#cat46 table.cblock:nth-child(12) {margin-bottom: 38px;}
+#cat46 table.cblock:nth-child(13) {clear: both;}
+#cat46 table.cblock:nth-child(13):before {content: "Свёрла по металлу";
   font-size: 160%; font-weight: normal; text-align: left; color: #ec8911;
   line-height: 0; position: relative; top: -31px; display: table-caption; width: max-content;}
 /* "display: table-caption" нужен для MS и WebKit (Blink) браузеров, а Мозилле он только мешает! */
-@-moz-document url-prefix() {#cat46 table.cblock:nth-child(14):before {display: unset;}}
+@-moz-document url-prefix() {#cat46 table.cblock:nth-child(13):before {display: unset;}}
 
 /*
 body#cat101 .ref {position: absolute; top: 140px; right: 272px; left: 680px;}
